fix: keep tabs visible while loading (#227)

--- a/components/App/Loader.scss
+++ b/components/App/Loader.scss
@@ -1,6 +1,7 @@
 .loader {
   position: absolute;
   right: 0;
+  bottom: 0;
   z-index: 99;
   box-sizing: border-box;
   background: var(--tabs-bg) var(--bg-gradient);
